force-app/main/default/objects/Test_Scripts__c/fields/Needed_for_Launch__c.field-meta.xml
<CustomField>
    <fullName>Needed_for_Launch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Test Script will be used for either QC or Launch Training</inlineHelpText>
    <label>Needed for Launch</label>
    <type>Checkbox</type>
</CustomField>