force-app/main/default/objects/Test_Scripts__c/fields/Observed_Result__c.field-meta.xml
<CustomField>
    <fullName>Observed_Result__c</fullName>
    <inlineHelpText>If you received the expected result, simply stating &quot;received expected result&quot; otherwise call out exactly what result you received.</inlineHelpText>
    <label>Observed Result</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>