force-app/main/default/objects/Test_Scripts__c/fields/Pre_Requisite_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Pre_Requisite_Conditions__c</fullName>
    <inlineHelpText>Please explain any steps that must be taken prior to being able to complete this test. For example if you&apos;re applying a Pledge Payment, a Pledge Record must exist first.</inlineHelpText>
    <label>Pre-Requisite Conditions</label>
    <length>25000</length>
    <type>Html</type>
</CustomField>