force-app/main/default/objects/Test_Scripts__c/fields/Steps_to_Test__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Test__c</fullName>
    <inlineHelpText>Detail out in a numbered list the Steps a user should take to test a specific functionality.</inlineHelpText>
    <label>Steps to Test</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>