force-app/main/default/objects/Test_Scripts__c/fields/Test_As__c.field-meta.xml
<CustomField>
    <fullName>Test_As__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test As</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Scripts1</relationshipName>
    <type>Lookup</type>
</CustomField>