force-app/main/default/objects/Test_Scripts__c/fields/Testing_Status__c.field-meta.xml
<CustomField>
    <fullName>Testing_Status__c</fullName>
    <inlineHelpText>Indicate the testing status.</inlineHelpText>
    <label>Testing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Heller Review</fullName>
            </value>
            <value>
                <fullName>Ready for EDF IT Review</fullName>
            </value>
            <value>
                <fullName>Ready to Test in Developer Sandbox</fullName>
            </value>
            <value>
                <fullName>Testing in Progress</fullName>
            </value>
            <value>
                <fullName>Tested - Passed in Developer Sandbox</fullName>
            </value>
            <value>
                <fullName>Tested - Failed in Developer Sandbox</fullName>
            </value>
            <value>
                <fullName>Ready for Retesting - Developer Sandbox</fullName>
            </value>
            <value>
                <fullName>Ready to Test in Full Sandbox</fullName>
            </value>
            <value>
                <fullName>Tested - Passed in Full Sandbox</fullName>
            </value>
            <value>
                <fullName>Tested - Failed in Full Sandbox</fullName>
            </value>
            <value>
                <fullName>Ready for Retesting - Full Sandbox</fullName>
            </value>
            <value>
                <fullName>Unable to Test - Blocked</fullName>
            </value>
            <value>
                <fullName>Ready for Production QC</fullName>
            </value>
            <value>
                <fullName>QC Passed in Prod</fullName>
            </value>
            <value>
                <fullName>N/A - Configuration Deprecated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>