force-app/main/default/objects/Test_Scripts__c/listViews/Climate_Corps_Test_Scripts.listView-meta.xml
<ListView>
    <fullName>Climate_Corps_Test_Scripts</fullName>
    <columns>NAME</columns>
    <columns>Testing_Status__c</columns>
    <columns>Testing_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Testing_Team__c</field>
        <operation>equals</operation>
        <value>Climate Corps</value>
    </filters>
    <filters>
        <field>Testing_Status__c</field>
        <operation>notEqual</operation>
        <value>Testing in Progress,Tested - Passed,Tested - Failed,Unable to Test - Blocked,Test Resolved,Ready for Documentation,Ready for QC,QC Passed in Prod,N/A - Configuration Deprecated</value>
    </filters>
    <label>Climate Corps Test Scripts</label>
</ListView>