force-app/main/default/objects/Test_Scripts__c/listViews/Failed_Test_Scripts.listView-meta.xml
<ListView>
    <fullName>Failed_Test_Scripts</fullName>
    <columns>NAME</columns>
    <columns>User_Story__c</columns>
    <columns>Steps_to_Test__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Testing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Testing_Status__c</field>
        <operation>equals</operation>
        <value>Tested - Failed,Unable to Test - Blocked</value>
    </filters>
    <label>Failed Test Scripts</label>
</ListView>