force-app/main/default/objects/Test_Scripts__c/listViews/Matt_s_Test_Scripts.listView-meta.xml
<ListView>
    <fullName>Matt_s_Test_Scripts</fullName>
    <columns>NAME</columns>
    <columns>User_Story__c</columns>
    <columns>Testing_Completed_By__c</columns>
    <columns>Testing_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Observed_Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Testing_Completed_By__c</field>
        <operation>equals</operation>
        <value>Matt Duprey</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>TS-00000208,TS-00000203,TS-00000189,TS-00000024,TS-00000019,TS-00000014,TS-00000005,TS-00000268,TS-00000211</value>
    </filters>
    <label>Matt&apos;s Test Scripts</label>
</ListView>