force-app/main/default/objects/Test_Scripts__c/listViews/Suchita_s_Test_Scripts.listView-meta.xml
<ListView>
    <fullName>Suchita_s_Test_Scripts</fullName>
    <columns>NAME</columns>
    <columns>User_Story__c</columns>
    <columns>Testing_Status__c</columns>
    <columns>Steps_to_Test__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Suchita</value>
    </filters>
    <label>Suchita&apos;s Test Scripts</label>
</ListView>