force-app/main/default/objects/Test_Scripts__c/listViews/Test_Scripts_by_Assignee.listView-meta.xml
<ListView>
    <fullName>Test_Scripts_by_Assignee</fullName>
    <columns>NAME</columns>
    <columns>User_Story__c</columns>
    <columns>Testing_Completed_By__c</columns>
    <columns>Testing_Status__c</columns>
    <columns>Testing_Team__c</columns>
    <columns>Steps_to_Test__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Testing_Completed_By__c</field>
        <operation>contains</operation>
        <value>alyssa</value>
    </filters>
    <label>Test Scripts by Assignee</label>
</ListView>